# voidlab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
attacker-box/: Dockerfile  exec_server.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: apps.py  exceptions.py  middleware.py  views.py  ws_auth.py
backend/apps/labs/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/labs/management/commands/: seed_labs.py
backend/apps/leaderboard/: apps.py  urls.py  views.py
backend/apps/terminal/: apps.py  consumers.py  routing.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md  CLI.md  GUI.md
examples/: async_example.py  automation_macro.py  monitoring.py  multi_device.py  pairing.py  quickstart.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  LabDetail.tsx  Labs.tsx  Landing.tsx  Leaderboard.tsx  Login.tsx  NotFound.tsx  Register.tsx  Terminal.tsx
frontend/src/store/: authStore.ts  labStore.ts
frontend/src/types/: index.ts
scripts/: build.py  setup_dev.py
tests/: __init__.py  conftest.py
tests/cli/: test_cli.py
tests/gui/: __init__.py  conftest.py  test_dashboard_view.py  test_theme.py  test_thread_lifecycle.py
tests/integration/: test_device_service.py
tests/packaging/: __init__.py  test_packaging.py
tests/unit/: test_automation.py  test_device_parser.py  test_input_service.py  test_models.py  test_security.py  test_settings.py  test_version.py
voidremote/: __init__.py
voidremote/adb/: __init__.py  client.py  device_parser.py
voidremote/api/: __init__.py  async_client.py  client.py  device.py  exceptions.py  pairing.py
voidremote/cli/: __init__.py  main.py
voidremote/config/: __init__.py  settings.py
voidremote/controllers/: __init__.py  app_controller.py
voidremote/core/: __init__.py  automation.py
voidremote/models/: __init__.py  device.py
voidremote/network/: __init__.py  discovery.py
voidremote/services/: __init__.py  device_service.py  input_service.py  monitor_service.py
voidremote/ui/: __init__.py  app.py  main_window.py  theme.py  workers.py
voidremote/ui/dialogs/: __init__.py  connect_dialog.py  pair_dialog.py
voidremote/ui/views/: __init__.py  dashboard_view.py  files_view.py  monitor_view.py  settings_view.py  shell_view.py
voidremote/ui/widgets/: __init__.py  device_card.py  log_view.py  metric_gauge.py
voidremote/utils/: __init__.py  logging.py  security.py  version.py
vulnerable-apps/cmdi-lab/: Dockerfile  app.py
vulnerable-apps/idor-lab/: Dockerfile  app.py
vulnerable-apps/sqli-lab/: Dockerfile  app.py
vulnerable-apps/sqli-lab/templates/: dashboard.html  login.html
vulnerable-apps/ssrf-lab/: Dockerfile  app.py
vulnerable-apps/xss-lab/: Dockerfile  app.py
